cluster/base/magento-php-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-php-fpm
  labels:
    component: php-fpm
spec:
  type: ClusterIP
  selector:
    component: php-fpm
    color: blue  # This will be updated by traffic switch script
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: fastcgi
