cluster/base/magento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-svc
  labels:
    app: magento
spec:
  type: ClusterIP
  selector:
    component: nginx
    color: blue  # Traffic switch: change to 'green' to switch deployments
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: magento-svc-blue
  labels:
    app: magento
spec:
  type: ClusterIP
  selector:
    component: nginx
    color: blue
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: magento-svc-green
  labels:
    app: magento
spec:
  type: ClusterIP
  selector:
    component: nginx
    color: green
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
